--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
     "mongoose": "^8.2.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
