--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.7.1",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
